feat: vcpkg as package manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,12 @@ cmake_minimum_required(VERSION 3.16)
 
 project(
 	Pawnshop
-	VERSION 0.1
+	VERSION 0.1.0
 	DESCRIPTION "Controlls rails and scales in automated pawnshop"
 	LANGUAGES CXX)
 
 # True if this project is main and not included with add_subdirectory
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-	# Use -std=c++xx instead of -std=g++xx
-	set(CMAKE_CXX_EXTENSIONS OFF)
 	# Provides IDE's with information about folders
 	set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
@@ -19,16 +17,19 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 	else()
 		message(STATUS "Doxygen not found, docs build skipped")
 	endif()
+
+    # Use vcpkg for libraries
+    if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+        set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
+            CACHE STRING "")
+    endif()
 endif()
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 find_package(Threads REQUIRED)
 find_package(Gpiod REQUIRED)
-
-# TODO: Fix C library compilation upstream
-set(PAHO_MQTT_C_LIBRARIES "/usr/local/lib/libpaho-mqtt3a.so")
-set(PAHO_MQTT_C_INCLUDE_DIRS "/usr/local/include")
 find_package(PahoMqttCpp REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 add_subdirectory(src)
 add_subdirectory(apps)
