fix: clang-tidy complaints

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,11 @@ target_include_directories(pawnshop PUBLIC ../include)
 
 target_link_libraries(pawnshop PRIVATE Gpiod::Gpiod atomic ${CMAKE_THREAD_LIBS_INIT})
 
-target_compile_features(pawnshop PUBLIC cxx_std_17)
+set_target_properties(pawnshop PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+)
 
 source_group(
     TREE "${PROJECT_SOURCE_DIR}/include"
