feat: `conan install` integrated into cmake build
It was annoying to manually call conan install before running cmake
--build, now it's integrated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,21 @@ project(
 
 # True if this project is main and not included with add_subdirectory
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+    # Script for running conan inside cmake
+    if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+        message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+        file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.16.1/conan.cmake"
+            "${CMAKE_BINARY_DIR}/conan.cmake"
+            EXPECTED_HASH SHA256=396e16d0f5eabdc6a14afddbcfff62a54a7ee75c6da23f32f7a31bc85db23484
+            TLS_VERIFY ON)
+    endif()
+    include(${CMAKE_BINARY_DIR}/conan.cmake)
+    conan_cmake_autodetect(settings)
+    conan_cmake_install(PATH_OR_REFERENCE ${CMAKE_SOURCE_DIR}
+        BUILD missing
+        REMOTE conancenter
+        SETTINGS ${settings})
+
     if(EXISTS "${CMAKE_BINARY_DIR}/conan_paths.cmake")
         message(STATUS "Using conan for dependencies")
         include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
